<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/head_image_iv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_launcher"
                />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/head_image_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_333333"
                android:textSize="13sp"
                tools:text="名字"
                />

            <TextView
                android:id="@+id/tele_incoming_tips_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tele_incoming_tips"
                android:textColor="@color/black_333333"
                android:textSize="14sp"
                />


            <TextView
                android:id="@+id/warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/warning_text"
                android:textColor="@color/gray_aaaaaa"
                android:textSize="13sp"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ignore_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/ignore_text"
                android:textColor="@color/blue_3cbaff"
                android:textSize="15sp"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dcdcdc"
                />

            <TextView
                android:id="@+id/answer_the_phone_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/answer_the_phone_text"
                android:textColor="@color/red"
                android:textSize="15sp"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>