<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/tele_incoming_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="张医生"
            android:textColor="@color/black_333333"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/tele_incoming_tips"
            android:textColor="@color/black_333333"
            android:textSize="14sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="62dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/refuse_tele_call"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/call_refuse"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/refuse"
            android:textColor="@color/black_666666"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="62dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/response_tele_call"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/call_receive"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/receive"
            android:textColor="@color/black_666666"
            android:textSize="14dp"/>
    </LinearLayout>


</RelativeLayout>
